--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <p>Добрый день! Всего Вам хорошего, счастья, здоровья!!! Извините, мы не нашли компанию с лицензионной политикой, точнее лицензионную 
     политику хоть какой-нибудь компании.
     Прошу нас извинить, но мы придумали ответы сами.
-    Ещё раз желаем Вам счастья, здоровья и хороших учеников, которые найду лицензионную политику.</p>
+    Ещё раз желаем Вам счастья, здоровья и хороших учеников, которые найдут лицензионную политику.</p>
 </body>
 </html>
