--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title></title>
 </head>
 <body>
+    <div class="spinner-border text-light" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+      <div class="spinner-border text-info" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+      <div class="spinner-border text-danger" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
     <p>Добрый день! Всего Вам хорошего, счастья, здоровья!!! Извините, мы не нашли компанию с лицензионной политикой, точнее лицензионную 
     политику хоть какой-нибудь компании.
     Прошу нас извинить, но мы придумали ответы сами.
