--- a/index.html
+++ b/index.html
@@ -7,16 +7,10 @@
     <title></title>
 </head>
 <body>
-    <div class="spinner-border text-light" role="status">
-        <span class="visually-hidden">Loading...</span>
-      </div>
-      <div class="spinner-border text-info" role="status">
-        <span class="visually-hidden">Loading...</span>
-      </div>
-      <div class="spinner-border text-danger" role="status">
-        <span class="visually-hidden">Loading...</span>
-      </div>
-    <p>Добрый день! Всего Вам хорошего, счастья, здоровья!!! Извините, мы не нашли компанию с лицензионной политикой, точнее лицензионную 
+    <p>
+    <div class="alert alert-warning" role="alert">
+    Добрый день!
+    </div>Всего Вам хорошего, счастья, здоровья!!! Извините, мы не нашли компанию с лицензионной политикой, точнее лицензионную 
     политику хоть какой-нибудь компании.
     Прошу нас извинить, но мы придумали ответы сами.
     Ещё раз желаем Вам счастья, здоровья и хороших учеников, которые найдут лицензионную политику.</p>
